Fixes regression test hanging
by increasing permgen space for the scalatest jvm

reviewed by: robertchu
commit: https://github.com/kijiproject/kiji-express/commit/2b3a03b803f5bd5faeb3f701297b5384e30d8252