@@ -301,7 +301,7 @@
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>WDF TestSuite.txt</filereports>
-          <argLine>-Xmx2048m</argLine>
+          <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
           <systemProperties>
             <jline.terminal>jline.UnsupportedTerminal</jline.terminal>
           </systemProperties>
